# auctionote

./: .gitignore  DEPLOY_STEPS.md  LOOP_LOG.md  ORCHESTRATION.md  PHASE_0_DONE.md  PHASE_0_SCAFFOLD.md  PHASE_A_COLLECT.md  PHASE_A_DONE.md  PHASE_B_IMPLEMENT.md  PHASE_C_DEPLOY.md  PHASE_C_DONE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: keepalive.yml
.streamlit/: config.toml
analysis/: geocode.py  insights.py  market.py  schema.py  stats.py
crawler/: live.py  parse.py
dashboard/: app.py
data/: auctionote.db
docs/: MISSGO_ONE_PAGER.md  MISSGO_RESEARCH_REPORT.md  RESUME_BULLETS.md
docs/screenshots/: README.md
fixtures/: COLLECT_LOG.txt  LIVE_CRAWL_ABANDONED.md  LIVE_CRAWL_NOTES.md  MANIFEST.json
fixtures/expected/: detail_apt_1.json  detail_apt_2.json  detail_apt_3.json  detail_land_1.json  detail_shop_1.json  detail_villa_1.json  list_page_01.json  list_page_02.json
fixtures/raw/: detail_apt_1.html  detail_apt_2.html  detail_apt_3.html  detail_land_1.html  detail_shop_1.html  detail_villa_1.html  list_page_01.html  list_page_02.html
scripts/: check_streamlit.py  collect.py  migrate_postgres.py  reindex_elastic.py  seed_fixtures.py  take_screenshots.py  verify_phase_a.py
search/: __init__.py  elastic.py
storage/: postgres.py  sqlite.py
tests/: conftest.py  test_elastic_search.py  test_geocode.py  test_insights.py  test_live.py  test_market.py  test_parse.py  test_postgres_storage.py  test_stats.py  test_storage.py
